@@ -40,14 +40,16 @@ public class ArticleService {
     }
 
     public Article findById(Long id) {
-        return articleRepository.findById(id).orElseThrow(() -> new NoSuchElementException(String.format("No search id.id={%s}", id)));
+        return articleRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("No search id.id={%s}".formatted(id)));
     }
 
     public ArticleResponse getArticle(Long id) {
-        Article articleResponse = articleRepository.getArticleByIdFetchComment(id);
-        int view = articleResponse.getView()+1;
-        articleResponse.updateView(view);
-        return new ArticleResponse(articleResponse);
+        Article article = articleRepository.findArticleById(id)
+                .orElseThrow(()-> new NoSuchElementException("No search id.id={%s}".formatted(id)));
+        int view = article.getView()+1;
+        article.updateView(view);
+        return new ArticleResponse(article);
     }
 
     public Page<ArticleAllResponse> getAll(ArticleCondition articleCondition, PageRequest pageRequest) {
